Implemented  - slaStudentsOp()  - slaResultatenOp()  - haalResultaatOp()  - showStudents()  - isStudentSuccessful()  - meestBehaaldeResultaat()
Fixed:
 - loginStudent()
 - class JsonHandler

Moved:
 - isLoggedIn() -> Student::class
 - loginStudent() -> Student::class

Code cleanup
 - Optimized imports
 - Code refactoring

 MIKE -- TIM